--- a/index.html
+++ b/index.html
@@ -127,8 +127,8 @@
                   <div class="col-sm-8 col-md-8">
                     <div class="radio">
                       <label>
-                        <input type="radio" name="dateFormat" id="earthTime" value="earth">
-                        Julian Calendar (24h days, 365d years)
+                        <input type="radio" name="dateFormat" id="earthTime" value="earth" checked>
+                        Julian Calendar (24h days, 365d years, leap year when divisible by 4)
                       </label>
                     </div>
                   </div>
@@ -206,9 +206,9 @@
                   <label class="col-sm-4 col-md-4 control-label" for="earliestDepartureYear">Earliest departure</label>
                   <div class="col-sm-8 col-md-8">
                     <div class="input-group">
-                      <span class="input-group-addon">Year</span>
-                      <input type="number" class="form-control" id="earliestDepartureYear" value="1" min="1" step="any">
-                      <span class="input-group-addon">day</span>
+                      <span class="input-group-addon">CE</span>
+                      <input type="number" class="form-control" id="earliestDepartureYear" value="2000" min="-10000" step="any">
+                      <span class="input-group-addon">Day</span>
                       <input type="number" class="form-control" id="earliestDepartureDay" value="1" min="1" step="any">
                     </div>
                   </div>
@@ -356,9 +356,21 @@
           <h4>Acknowledgements</h4>
           <ul>
             <li>Alexmoon's amazing <a href="http://alexmoon.github.io/ksp">Launch Window Planner</a> which was adapted to make this.</li>
-            <li>Olex's beautiful <a href="http://ksp.olex.biz">Interactive illustrated interplanetary guide and calculator</a> which inspired me to create this tool as a web page.</li>
-            <li>Robert Braeunig's excellent <a href="http://www.braeunig.us/space/">Rocket and Space Technology</a> which provided most of the math powering these calculations.</li>
-            <li>And of course <a href="https://kerbalspaceprogram.com">Kerbal Space Program</a> for motivating me to finally learn orbital mechanics.</li>
+            <ul>
+              <li>Olex's beautiful <a href="http://ksp.olex.biz">Interactive illustrated interplanetary guide and calculator</a> which inspired me to create this tool as a web page.</li>
+              <li>Robert Braeunig's excellent <a href="http://www.braeunig.us/space/">Rocket and Space Technology</a> which provided most of the math powering these calculations.</li>
+              <li>And of course <a href="https://kerbalspaceprogram.com">Kerbal Space Program</a> for motivating me to finally learn orbital mechanics.</li>
+            </ul>
+          </ul>
+        </div>
+        <div class="row">
+          <h4>Data Disclaimer</h4>
+          <ul>
+            <li>Epoch used is 2000 January 1, midnight UTC.</li>
+            <li>The following data are not known and a substitute value is used:</li>
+            <ul>
+              <li><span class="strong">Phobos</span> and <span class="strong">Deimos</span>' mean anomaly (placeholder value of 3.14). </li>
+            </ul>
           </ul>
         </div>
       </section>
