Fixed Coffeescript compilation issues and updated HTML.

--- a/index.html
+++ b/index.html
@@ -369,7 +369,7 @@
             <li>Epoch used is 2000 January 1, midnight UTC.</li>
             <li>The following data are not known and a substitute value is used:</li>
             <ul>
-              <li><span class="strong">Phobos</span> and <span class="strong">Deimos</span>' mean anomaly (placeholder value of 3.14). </li>
+              <li><strong>Phobos</strong> and <strong>Deimos</strong>' mean anomaly (placeholder value of 3.14). </li>
             </ul>
           </ul>
         </div>
@@ -410,11 +410,9 @@
               <label class="col-sm-5 control-label" for="referenceBodySelect">Reference body</label>
               <div class="col-sm-7">
                 <select id="referenceBodySelect" class="form-control">
-									<option>Kerbol</option>
-									<option>Eve</option>
-									<option selected>Kerbin</option>
-									<option>Duna</option>
-                  <option>Jool</option>
+									<option>Sun</option>
+									<option selected>Earth</option>
+									<option>Mars</option>
                 </select>
               </div>
             </div>
