--- a/index.html
+++ b/index.html
@@ -232,8 +232,8 @@
                   <label class="col-sm-4 col-md-4 control-label" for="latestDepartureYear">Latest departure</label>
                   <div class="col-sm-8 col-md-8">
                     <div class="input-group">
-                      <span class="input-group-addon">Year</span>
-                      <input type="number" class="form-control" id="latestDepartureYear" value="1" min="1" step="any">
+                      <span class="input-group-addon">CE</span>
+                      <input type="number" class="form-control" id="latestDepartureYear" value="2099" min="-10000" step="any">
                       <span class="input-group-addon">day</span>
                       <input type="number" class="form-control" id="latestDepartureDay" value="1" min="1" step="any">
                     </div>
@@ -366,7 +366,7 @@
         <div class="row">
           <h4>Data Disclaimer</h4>
           <ul>
-            <li>Epoch used is 2000 January 1, midnight UTC.</li>
+            <li>Epoch used is 2000 January 1, midnight UTC. UT denotes time in seconds from this epoch.</li>
             <li>The following data are not known and a substitute value is used:</li>
             <ul>
               <li><strong>Phobos</strong> and <strong>Deimos</strong>' mean anomaly (placeholder value of 3.14). </li>
