Update date-time description in HTML

--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
                     <div class="radio">
                       <label>
                         <input type="radio" name="dateFormat" id="earthTime" value="earth" checked>
-                        Julian Calendar (24h days, 365d years, leap year when divisible by 4)
+                        Julian years (24h days, 365.25d years)
                       </label>
                     </div>
                   </div>
@@ -243,9 +243,9 @@
                   <label class="col-sm-4 col-md-4 control-label" for="shortestTimeOfFlight">Time of flight</label>
                   <div class="col-sm-8 col-md-8">
                     <div class="input-group">
-                      <input type="text" class="form-control" id="shortestTimeOfFlight" value="1">
+                      <input type="text" class="form-control" id="shortestTimeOfFlight" value="30">
                       <span class="input-group-addon">to</span>
-                      <input type="text" class="form-control" id="longestTimeOfFlight" value="1">
+                      <input type="text" class="form-control" id="longestTimeOfFlight" value="360">
                       <span class="input-group-addon">days</span>
                     </div>
                   </div>
