--- a/index.html
+++ b/index.html
@@ -369,7 +369,13 @@
             <li>Epoch used is 2000 January 1, midnight UTC. UT denotes time in seconds from this epoch.</li>
             <li>The following data are not known and a substitute value is used:</li>
             <ul>
-              <li><strong>Phobos</strong> and <strong>Deimos</strong>' mean anomaly (placeholder value of 3.14). </li>
+              <li>The mean anomaly of <strong>Phobos</strong>, <strong>Deimos</strong>, <strong>Amalthea</strong>, <strong>Io</strong>, <strong>Europa</strong>, <strong>Ganymede</strong>, <strong>Callisto</strong>, <strong>Himalia</strong>, <strong>Mimas</strong>, <strong>Enceladus</strong>, <strong>Tethys</strong>, <strong>Dione</strong>, <strong>Rhea</strong>, <strong>Titan</strong>, <strong>Hyperion</strong>, <strong>Iapetus</strong> and <strong>Phoebe</strong>. (placeholder value of 3.14). </li>
+            </ul>
+            <li>Only selected objects from the following satellite families were used:</li>
+            <ul>
+              <li><strong>Asteroid Belt</strong>: 2 most massive bodies (Dwarf planet <strong>Ceres</strong> and asteroid <strong>4 Vesta</strong>) - 2.50e20 kg and heavier.</li>
+              <li><strong>Jupiter moons</strong>: 7 most massive moons (<strong>Ganymede</strong>, <strong>Callisto</strong>, <strong>Io</strong>, <strong>Europa</strong>, <strong>Himalia</strong> and <strong>Amalthea</strong> ) - 2.00e20 kg and heavier.</li>
+              <li><strong>Saturn moons</strong>: 11 most massive moons (<strong>Titan</strong>, <strong>Rhea</strong>, <strong>Iapetus</strong>, <strong>Dione</strong>, <strong>Tethys</strong>, <strong>Enceladus</strong>, <strong>Mimas</strong>, <strong>Phoebe</strong> and <strong>Hyperion</strong>) - 2.00e20 kg and heavier.</li>
             </ul>
           </ul>
         </div>
